--- a/style.css
+++ b/style.css
@@ -6,8 +6,9 @@ body {
 
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    gap: 700px;
     color: #F9FAF8;
     padding: 15px;
 }
@@ -16,11 +17,6 @@ body {
     display: flex;
     list-style: none;
     gap: 20px;
-    margin-right: 177px;
-}
-
-.header>a {
-    margin-left: 105px;
 }
 
 .home-logo {
@@ -31,6 +27,7 @@ body {
 .hero-content {
     display: flex;
     justify-content: center;
+    align-items: center;
     padding: 80px;
     flex-shrink: 0;
 }
@@ -46,6 +43,10 @@ body {
     font-size: 48px;
 }
 
+.hero-text>h1 {
+    margin: 0;
+}
+
 .hero-text>p {
     max-width: 400px;
     font-size: 18px;
@@ -55,9 +56,123 @@ body {
     max-width: 500px;
     max-height: 200px;
     border-radius: 20px;
-    margin-left: 20px;
+    margin-left: 120px;
 }
+
+button {
+    background-color: #3882F6;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 15px;
+    color: #F9FAF8;
+    text-align: center;
+    text-decoration: none;
+    transition-duration: 0.2s; /* Slight delay for the hover */
+}
+
+button:hover { /* Make button more interactive */
+    background-color: #F9FAF8;
+    color: #1F2937;
+    cursor:pointer;
+  }
 
 .container-1 {
     background-color: #1F2937;
+}
+
+.container-2 {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 100px;
+}
+
+.container-2>p {
+    color: #3882F6;
+    margin: auto;
+    font-size: 36px;
+    font-weight: 700;
+    color: #1F2937;
+    padding: 32px;
+}
+
+.info-images {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.info-text {
+    max-width: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.info-text>img {
+    border-radius: 20px;
+}
+
+.info-text>p {
+    max-width: 200px;
+    align-self: center;
+    text-align: center;
+}
+
+.container-3 {
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.quote {
+    font-size: 36px;
+    max-width: 700px;
+    margin-top: 100px;
+    font-style: italic;
+}
+.quote-name {
+    align-self: flex-end;
+    font-size: 20px;
+    font-weight: 1000;
+    margin-right: 400px;
+}
+
+.container-4 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 75px;
+}
+.signup {
+    display: flex;
+    justify-content: center;
+    gap: 100px;
+    background-color: #3882F6;
+    padding: 30px 100px;
+    border-radius: 10px;
+    color:#F9FAF8;
+}
+
+.signup-button {
+    padding: 0px 30px;
+    border: 1px solid #F9FAF8;
+}
+
+.its-time {
+    font-weight: 1000;
+    font-size: 18px;
+    margin: 0;
+}
+
+.its-time-small {
+    font-size: 12px;
+    margin: 0;
+}
+
+.footer {
+    background-color: #1F2937;
+    color:#F9FAF8;
+    font-size: 12px;
+    text-align: center;
+    padding: 10px;
 }
